Feat: Add CMS get all stories
- Add CMS get all stories
